--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "portfolio-website",
+  "name": "shrijal-website",
   "version": "0.1.0",
+  "description": "Shrijal's website",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
