--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@emotion/styled": "^11.11.0",
     "@vercel/analytics": "^1.2.0",
     "framer-motion": "^11.0.3",
+    "i": "^0.3.7",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.0",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
