--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@vercel/analytics": "^1.2.0",
     "framer-motion": "^11.0.3",
+    "gray-matter": "^4.0.3",
     "i": "^0.3.7",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
